--- a/system/硬盘安装双系统.md
+++ b/system/硬盘安装双系统.md
@@ -1,14 +1,20 @@
-* windows 下硬盘安装linux 双系统
-** 工具
+# windows 下硬盘安装linux 双系统
+## 工具
 DiskGenius + Ext2Fsd + WinGrub + EasyBCD + ubantu/centos
-*** DiskGenius
+### DiskGenius
 硬盘分区、格式化
-*** Ext2Fsd
+### Ext2Fsd
 windows 下挂载、显示linux 文件系统格式内容
-*** WinGrub
+### WinGrub
+<p align="center">
+<img src="wingrub.png" width="300">
+<br>
+<sup>
 查看硬盘分区表
-[[https://github.com/sigmaxue/document/edit/main/system/wingrub.png]]
-*** EasyBCD
+</sup>
+</p>
+
+### EasyBCD
 设置系统引导
-*** linux.iso
+### linux.iso
 linux 系统镜像
